--- a/style2.css
+++ b/style2.css
@@ -4,6 +4,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 /* ===== BODY ===== */
 body {
@@ -172,6 +175,12 @@ header nav ul li a:hover {
     flex-direction: column;
     align-items: center;
   }
+}
+
+.card img {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 1rem;
 }
 
 /* ===== FOOTER ===== */
